<resources>
    <string name="app_name">Travel Journey</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name_not_set">Trip name not set</string>
    <string name="destination_not_set">Destination name not set</string>
    <string name="trip_name">Trip name</string>
    <string name="seaside">Seaside</string>
    <string name="city_break">City break</string>
    <string name="mountains">Mountains</string>
    <string name="trip_destination">Trip destination</string>
    <string name="save_trip">Save trip</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="delete_trip">Delete trip</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="trip_fab">trip_fab</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="reach_out_mail">Reach out for us on mail</string>
    <string name="reach_out_phone">Reach out for us on phone</string>
    <string name="reach_out_phone_number">123456789</string>

    <string name="facebook_app_id">422154249621099</string>
    <string name="facebook_client_token">Facebook Client ID</string>
    <string name="facebook_login_protocol_schema">fb422154249621099</string>
</resources>