<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#790e8b"
        android:hint="@string/trip_name"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#790e8b"
        android:hint="@string/trip_destination"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <RadioGroup
        android:id="@+id/edit_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_price">

        <RadioButton
            android:id="@+id/edit_type_seaside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#790e8b"
            android:text="@string/seaside"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <RadioButton
            android:id="@+id/edit_type_citybreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#790e8b"
            android:text="@string/city_break"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"/>

        <RadioButton
            android:id="@+id/edit_type_mountain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#790e8b"
            android:text="@string/mountains"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"/>
    </RadioGroup>

    <com.google.android.material.slider.Slider
        android:theme="@style/MyMaterialTheme"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="5000.0"
        android:stepSize="100.0"
        android:id="@+id/edit_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_rating"
        app:thumbColor="#790e8b"
        app:trackColor="@color/white" />

    <RatingBar
        android:id="@+id/edit_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#790e8b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_destination"/>

    <TextView
        android:id="@+id/edit_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/pick_start_date"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_radio_group" />

    <TextView
        android:id="@+id/edit_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/pick_end_date"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_radio_group" />

    <Button
        android:id="@+id/edit_trip_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#790e8b"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/save_trip"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/edit_trip_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#E91E63"
        android:drawableStart="@android:drawable/ic_menu_delete"
        android:text="@string/delete_trip"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>